<resources>
    <string name="app_name">BiometricSample</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_info_title">Sample App Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Sample App is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="arrow_back">Back Aroow</string>
    <string name="title_activity_main_bottom_nav">MainActivityBottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_beneficiary">Add Beneficiary</string>
    <string name="beneficiary_type">Beneficiary Type</string>
    <string name="accountNumber">Account Number</string>
    <string name ="beneficiaryName">Beneficiary Name</string>

        <string name="label_back">Back</string>
        <string name="jetlagged_app_heading">JetLagged</string>
        <string name="average_time_in_bed_heading">AVG. TIME IN BED</string>
        <string name="average_sleep_time_heading">AVG. SLEEP TIME</string>
        <string name="not_implemented">Not implemented yet</string>
        <string name="placeholder_text_ave_time">8h2min</string>
        <string name="placeholder_text_ave_time_2">7h15min</string>
        <string name="sleep_type_awake">Awake</string>
        <string name="sleep_type_rem">REM</string>
        <string name="sleep_type_light">Light</string>
        <string name="sleep_type_deep">Deep</string>
        <string name="sleep_tab_day_heading">Day</string>
        <string name="sleep_tab_week_heading">Week</string>
        <string name="sleep_tab_month_heading">Month</string>
        <string name="sleep_tab_six_months_heading">6M</string>
        <string name="sleep_tab_one_year_heading">1Y</string>



</resources>